--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
+############################
+# Dependencies
+############################
+node_modules/
+*/node_modules/
+
+############################
+# Build Outputs
+############################
+dist/
+build/
+dist-ssr/
+.client/
+.server/
+
+############################
+# Environment Variables
+############################
+.env
+.env.*
+!.env.example
+
+############################
 # Logs
-logs
+############################
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,16 +31,31 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+############################
+# Runtime Files
+############################
+pids/
+*.pid
+*.seed
+*.pid.lock
 
-# Editor directories and files
+############################
+# Coverage
+############################
+coverage/
+
+############################
+# OS Files
+############################
+.DS_Store
+Thumbs.db
+
+############################
+# Editor / IDE
+############################
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
