--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "migrate": "dotenvx run -- node-pg-migrate up -m migrations --migrations-table pgmigrations",
     "migrate:down": "dotenvx run -- node-pg-migrate down -m migrations --migrations-table pgmigrations"
